<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AgendaActivity" xmlns:app="http://schemas.android.com/apk/res/android"
    android:id="@+id/addIngLayout">

    <ImageButton
        android:contentDescription="@string/meal"
        android:id="@+id/addShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addMeal"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/addAdd"
        android:background="@android:drawable/ic_delete"
        android:src="@drawable/shop60" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addAgenda"
        android:text="@string/agenda"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/addMeal"
        android:text="@string/meal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/addShop"
        android:text="@string/shop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/addAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/addLong"
        android:src="@drawable/agenda60" />

    <ImageButton
        android:id="@+id/addMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addAgenda"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/agenda"
        android:src="@drawable/meal60" />

    <ImageButton
        android:id="@+id/addAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/shop"
        android:src="@drawable/add60" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/addAdd"
        android:text="@string/addCourt"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="47dp"
        android:text="@string/labelIng"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:inputType="text"
        android:id="@+id/editIng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/addAdd"
        android:layout_below="@+id/editIng"
        android:layout_marginTop="58dp"
        android:text="@string/create" />

</RelativeLayout>