<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AgendaActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp" >

        <ImageButton
            android:id="@+id/mealMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="28dp"
            android:layout_toRightOf="@+id/mealAgenda"
            android:background="@android:drawable/alert_light_frame"
            android:contentDescription="@string/agenda"
            android:src="@drawable/meal60" />

        <ImageButton
            android:id="@+id/mealAgenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_delete"
            android:contentDescription="@string/addLong"
            android:src="@drawable/agenda60" />

        <ImageButton
            android:id="@+id/mealAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_delete"
            android:contentDescription="@string/shop"
            android:src="@drawable/add60" />

        <ImageButton
            android:id="@+id/mealShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/mealAdd"
            android:layout_marginRight="36dp"
            android:layout_toLeftOf="@+id/mealAdd"
            android:background="@android:drawable/ic_delete"
            android:contentDescription="@string/meal"
            android:src="@drawable/shop60" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mealMeal"
            android:layout_alignParentLeft="true"
            android:text="@string/agenda"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/mealMeal"
            android:layout_alignLeft="@+id/mealShop"
            android:text="@string/shop"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/TextView01"
            android:layout_alignBottom="@+id/TextView01"
            android:layout_alignParentRight="true"
            android:text="@string/addCourt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
   
</FrameLayout>