<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".AgendaActivity" >

    <ImageButton
        android:contentDescription="@string/meal"
        android:id="@+id/addShop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addMeal"
        android:layout_marginRight="23dp"
        android:layout_toLeftOf="@+id/addAdd"
        android:background="@android:drawable/ic_delete"
        android:src="@drawable/shop60" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addAgenda"
        android:text="@string/agenda"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/addMeal"
        android:text="@string/meal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/addShop"
        android:text="@string/shop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/addAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignParentRight="true"
        android:background="@android:drawable/alert_light_frame"
        android:contentDescription="@string/shop"
        android:src="@drawable/add60" />

    <ImageButton
        android:id="@+id/addAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/addLong"
        android:src="@drawable/agenda60" />

    <ImageButton
        android:id="@+id/addMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addAgenda"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/textView1"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/agenda"
        android:src="@drawable/meal60" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignParentRight="true"
        android:text="@string/ingredient"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/buttonAddPlate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="94dp"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/plate"
        android:src="@drawable/meal" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/buttonAddPlate"
        android:text="@string/plate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/TextView03"
        android:layout_alignTop="@+id/buttonAddPlate"
        android:layout_marginRight="21dp"
        android:background="@android:drawable/ic_delete"
        android:contentDescription="@string/plate"
        android:src="@drawable/meal" />

</RelativeLayout>